# mri-viewer

./: .gitignore  CONTRIBUTING.rst  Dockerfile  LICENSE  README.md  README.rst  build.bat  run.py  setup.cfg
.github/workflows/: test_and_release.yml
bundles/desktop/: README.md  create_exe.bat  create_linux.sh  create_mac.sh
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: requirements.txt
desktop/: README.md  create_linux.sh  create_windows.bat  requirements.txt
docker/: README.md
docker/scripts/: build_server.sh  run_image.sh
docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
jupyter/: mri_viewer.ipynb  requirements.txt
mri_viewer/: __init__.py
mri_viewer/app/: callbacks.py  constants.py  core.py  engine.py  main.py  pipeline.py  pipelines.py  styles.py  vti_file_manager.py  vti_pipeline.py  watchdog.py
mri_viewer/app/assets/: __init__.py  asset_manager.py
mri_viewer/app/components/: __init__.py  axes_icon.py  button_with_tooltip.py  data_array_select.py  language_buttons.py  load_files_dialog.py  picker_info.py  progress_bar.py  representation_select.py  slice_position_slider.py  upload_files.py  upload_vti_files.py  view.py  visualization.py  vti_file_select.py
mri_viewer/app/components/buttons/: __init__.py  dialog_button.py  language_buttons.py  open_dialog_button.py  open_manage_files_dialog_button.py  open_upload_files_dialog_button.py  user_guide_button.py
mri_viewer/app/components/decorators/: tooltip.py
mri_viewer/app/components/dialogs/: __init__.py  manage_files_dialog.py  upload_files_dialog.py
mri_viewer/app/components/icons/: __init__.py  animation_icons.py  icon.py  logo.py  picker_modes_icons.py  toggle_icon.py  toolbar_icons.py
mri_viewer/app/components/interaction/: rotation_interaction.py  slice_interaction.py  translation_interaction.py  zoom_interaction.py
mri_viewer/app/components/interactions/: __init__.py  rotation_interaction.py  rotation_tool.py  slice_interaction.py  slice_tool.py  translation_interaction.py  (+3 more)
mri_viewer/app/docs/: user_guide_cz.docx  user_guide_en.docx
mri_viewer/app/file_management/: file_manager.py  vti_file.py
mri_viewer/app/files/: __init__.py  file.py  file_group.py  file_manager.py
mri_viewer/app/localization/: __init__.py  czech.py  english.py  language.py  language_manager.py
mri_viewer/app/pipelines/: __init__.py  pipeline.py  pipeline_builder.py  pipeline_factory.py  pipeline_manager.py  vti_pipeline.py
mri_viewer/app/vtk/: __init__.py  vtk_creator.py  vtk_factory.py  vtk_manager.py
notebooks/: mri_viewer.ipynb
tests/: test_controller.py  test_ctrl.py  test_file_manager.py  test_import.py  test_language_manager.py  test_vtk_manager.py
(+11 files in other folders)
