[metadata]
name = mri-viewer
version = 1.0.0
description = A web application for visualizing and viewing MRI outputs
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Karel Vrabec
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    pywebview
    requests
    setuptools
    trame
    trame-components
    trame-vtk
    trame-vuetify
    vtk
    watchdog

[options.package_data]
mri_viewer.app.assets = *.png
mri_viewer.app.docs = *.pdf

[options.entry_points]
console_scripts =
    mri-viewer = mri_viewer.app:main
jupyter_serverproxy_servers =
    mri-viewer = mri_viewer.app.jupyter:jupyter_proxy_info

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
