[metadata]
name = mri-viewer
version = 1.0.0
description = A web application for analyzing and visualizing VTI files
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Karel Vrabec
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    pywebview==5.0.5
    requests==2.31.0
    setuptools==69.4.2
    trame==3.5.5
    trame-client==2.17.1
    trame-components==2.3.0
    trame-server==2.17.3
    trame-vtk==2.8.5
    trame-vuetify==2.4.3
    vtk==9.3.0
    watchdog==4.0.0
    wslink==1.12.4

[options.package_data]
mri_viewer.app.docs = *.pdf

[options.entry_points]
console_scripts =
    mri-viewer = mri_viewer.app:main
jupyter_serverproxy_servers =
    mri-viewer = mri_viewer.app.jupyter:jupyter_proxy_info

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
